welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:11: error: value |&& is not a member of Boolean
    if (day !=0 |&& day !=6)
                ^